# vox

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_pipeline.py
vox/: __init__.py  cli.py  config.py  conversation.py  pipeline.py  types.py
vox/audio/: __init__.py  microphone.py  speaker.py  vad.py
vox/processing/: __init__.py  anti_parrot.py  interruption.py  sentence_collector.py  think_stripper.py  tts_sanitizer.py
vox/providers/: __init__.py  base.py
vox/providers/llm/: __init__.py  anthropic_llm.py  ollama_llm.py  openai_llm.py  spec.py
vox/providers/stt/: __init__.py  faster_whisper.py
vox/providers/tts/: __init__.py  kokoro.py
